# editor-config

./: .gitignore  README.md  editor-config.cabal
app/: Main.hs
src/Data/: ConfigParser.hs  EditorConfig.hs
test/: Spec.hs
test/ec/foo/: .editorconfig
