name:                editor-config
version:             0.1.0.0
synopsis:            A parser for EditorConfig file
description:         Please see README.md
homepage:            http://github.com/kseo/editor-config#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           BSD-3-Clause
category:            Editor
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.EditorConfig
  other-modules:       Data.ConfigParser
  build-depends:       attoparsec >= 0.13 && < 0.14
                     , base >= 4.7 && < 5
                     , directory >= 1.2.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , Glob >= 0.7 && < 0.8
                     , mtl >= 2.2.1 && < 2.3
                     , text >= 1.2 && < 1.3
                     , unordered-containers >= 0.2 && < 0.3
  default-language:    Haskell2010

executable editor-config
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , editor-config
                     , optparse-applicative >= 0.12 && < 0.13
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

test-suite editor-config-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory
                     , editor-config
                     , filepath
                     , hspec
                     , raw-strings-qq
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/editor-config
